# arrow.mojo

./: .gitattributes  .gitignore  .gitpod.yml  .pre-commit-config.yaml  Makefile  README.md  mojoproject.toml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yaml
arrow/: __init__.mojo  arrow.mojo  bitmap.mojo  c_data_interface.mojo  util.mojo  varbinary.mojo
arrow/array/: bool_array.mojo
arrow/buffer/: __init__.mojo  binary.mojo  bitmap.mojo  dtype.mojo  fixed_width.mojo  offset.mojo
arrow/physical_layout/: arrow.mojo  fixed_size_list.mojo  varbinary.mojo  varlist.mojo
src/: arrow.mojo  test.mojo
test/: test_arrow.mojo  test_c_data_interface.mojo  test_data.csv  test_util.mojo  test_varbinary.mojo
test/array/: test_bool_array.mojo
test/buffer/: test_binary.mojo  test_bitmap.mojo
test/physical_layout/: test_arrow.mojo  test_fixed_size_list.mojo  test_varbinary.mojo  test_varlist.mojo
